@startuml

title __TWITTERSTAGE's Class Diagram__\n

  package Twitter {
    package Twitter.twitterstage {
      interface CellLoaderStrategy {
          {abstract} + loadCell()
      }
    }
  }
  

  package Twitter {
    package Twitter.twitterstage {
      class Feedcontroller {
          ~ focusButton : Button
          ~ tweetButton : Button
          ~ homeButton : Button
          ~ meButton : Button
          ~ searchButton : Button
          ~ logoutButton : Button
          ~ refreshButton : Button
          ~ hashTagTextField : TextField
          ~ tweetTextField : TextField
          ~ searchTextField : TextField
          ~ circledProfileIMG : Circle
          ~ circlePaneIMG : Circle
          ~ communicationLabel : Label
          ~ nameLabel : Label
          ~ foundLabel : Label
          ~ smallNameLabel : Label
          ~ tweetsNumberLabel : Label
          ~ followerNumberLabel : Label
          ~ followingNumberLabel : Label
          ~ tweetListView : ListView<Post>
          - observablePostList : ObservableList<Post>
          + initialize()
          - refreshComponents()
          - refreshListView()
          - fetchHashTag()
          + goToSearch()
          + goToPersonal()
          + logOut()
          + tweet()
          + refresh()
      }
    }
  }
  

  package Twitter {
    package Twitter.twitterstage {
      class PersonalFeedController {
          ~ focusButton : Button
          ~ homeButton : Button
          ~ meButton : Button
          ~ searchButton : Button
          ~ logoutButton : Button
          ~ refreshButton : Button
          ~ changePasswordButton : Button
          ~ showTweetButton : Button
          ~ showFollowerButton : Button
          ~ showFollowingButton : Button
          ~ changeImageButton : Button
          ~ circledProfileIMG : Circle
          ~ searchTextField : TextField
          ~ followerNumberLabel : Label
          ~ communicationLabel : Label
          ~ foundLabel : Label
          ~ followingNumberLabel : Label
          ~ tweetsNumberLabel : Label
          ~ nameLabel : Label
          ~ smallNameLabel : Label
          ~ dateJoinedLabel : Label
          ~ personListView : ListView<Person>
          ~ postListView : ListView<Post>
          ~ observablePostList : ObservableList<Post>
          ~ observableFollowList : ObservableList<Person>
          + initialize()
          - refreshComponents()
          - refreshPostListView()
          - refreshUserListView()
          + goToHome()
          + goToSearch()
          + logOut()
          + changeProfileImage()
          + showTweet()
          + showFollower()
          + showFollowing()
          + refresh()
          + changePassword()
      }
    }
  }
  

  package Twitter {
    package Twitter.twitterstage {
      class SearchFeedController {
          ~ focusButton : Button
          ~ homeButton : Button
          ~ meButton : Button
          ~ searchButton : Button
          ~ logoutButton : Button
          ~ refreshButton : Button
          ~ circledProfileIMG : Circle
          ~ searchTextField : TextField
          ~ nameLabel : Label
          ~ foundLabel : Label
          ~ smallNameLabel : Label
          ~ followerNumberLabel : Label
          ~ followingNumberLabel : Label
          ~ tweetsNumberLabel : Label
          ~ communicationLabel : Label
          ~ searchedElementLabel : Label
          ~ smallSearchedElementLabel : Label
          ~ searchListView : ListView
          - observablePostList : ObservableList<Post>
          - observablePersonList : ObservableList<Person>
          + initialize()
          - refreshComponents()
          - checkSearchResult()
          + goToSearch()
          + goToHome()
          + goToPersonal()
          + logOut()
          + refresh()
      }
    }
  }
  

  package Twitter {
    package Twitter.twitterstage {
      class TweeterLoader {
          + loadStage()
      }
    }
  }
  

  Feedcontroller -up-|> Initializable
  Feedcontroller o-- MessageHandler : handler
  PersonalFeedController -up-|> Initializable
  PersonalFeedController o-- MessageHandler : handler
  SearchFeedController -up-|> Initializable
  SearchFeedController o-- MessageHandler : handler
  TweeterLoader -up-|> WindowSizer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
